<resources>
    <string name="app_name">LOAVES-Surveillance</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_google_drive">googleDrive</string>
    <string name="google_app_id">1048591951354-ncn8a6e82o8k9e2ubhh9un5l7ln7rk4k.apps.googleusercontent.com</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="about_intro">Hello Everyone! This is the LOAVES app.  Don\'t be fooled by the app\'s title; this is a very serious app that may save your bacon! Using a camera, LOAVES can help you watch over your home, family, or any other important family belongings.</string>
    <string name="lorem1">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras lobortis sapien ac orci ullamcorper varius. Sed luctus tempor lectus nec viverra. Pellentesque mattis imperdiet libero, vel vehicula quam facilisis at. Vivamus ut nibh in eros placerat volutpat eget sit amet orci. Integer in ullamcorper justo. Nam fermentum enim sit amet lorem porttitor molestie vel ut orci. Nulla iaculis porta imperdiet.</string>
    <string name="lorem2">Vestibulum porttitor mi eu arcu feugiat, ut consectetur velit posuere. Quisque eu viverra massa. Nam dignissim venenatis libero, vitae mollis purus ultricies vitae. Nulla fermentum eget risus nec scelerisque. Sed eu tempor neque. Nam rutrum ullamcorper egestas. Integer rutrum convallis turpis, eu blandit nisi auctor sed.</string>
    <string name="lorem3">Pellentesque quis augue mauris. Nulla velit arcu, viverra ac vestibulum id, hendrerit ac ante. Morbi sit amet tempus justo, ut dictum justo. Etiam lorem lorem, tristique et orci nec, tempus congue nulla. Duis nibh neque, fringilla quis tellus et, porttitor commodo ligula. Praesent finibus consectetur sollicitudin. Cras porta urna consectetur leo luctus facilisis. Praesent egestas est non venenatis pellentesque. Nulla dui est, vulputate eget dapibus ut, dapibus quis mauris.</string>
    <string name="github_address_info">The source code for this project can be found at https://github.com/LOAVES-Surveillance</string>
    <string name="code_creators">This project was made by a group of five students at Utah State University. Go Aggies!</string>
    <string name="about_the_what">Loaves Surveillance is a surveillance system project.  This project allows you to use a Raspberry Pi with a Pi Camera to broadcast live video and store footage on Google Drive.  Recorded and live video can be viewed from the app you are currently using.</string>
    <string name="about_the_where">Loaves is mostly meant for personal use in the home, but could potentially be used other places. Use it to your liking.</string>
    <string name="about_the_whence">Loaves began to be developed in February 2017 at Utah State University, Logan, Utah. It was began as a class project.</string>
    <string name="about_the_how">You can find more information about how to set up your surveillance system at https://github.com/LOAVES-Surveillance.</string>
    <string name="about_the_why">Loaves is the answer for those who need some surveillance and have a little tech know-how. There is no monthly fee; in fact, it is free. It uses Google Drive for all data storage, so it is as secure as Google is.</string>
    <string name="about_outro">We hope you enjoy this software and that it helps you to keep your home and possessions safe. If you have comments and suggestions, please create an issue at https://github.com/LOAVES-Surveillance.</string>
</resources>
