<RelativeLayout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:paddingTop="65dp"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context="com.example.deverl.loaves_surveillance.MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:weightSum="1">

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_what"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_why"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_where"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_whence"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView9"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_the_how"
                android:textSize="18sp" />

            <Space
                android:layout_width="match_parent"
                android:layout_height="@dimen/fab_margin" />

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_outro"
                android:textSize="18sp" />

            <ImageView
                android:id="@+id/imageView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:srcCompat="@mipmap/bread" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
